# ProgrammingPortfolioWebsite

./: .gitignore  README.md  docker-compose.yaml  package-lock.json
.github/workflows/: CD.yml  CI.yml
backend/: CMakeLists.txt  Dockerfile  README.md
backend/.devcontainer/: devcontainer.json
backend/src/: main.cc
db/: README.md
frontend/: Cargo.toml  Dockerfile  Trunk.toml  index.html  tailwind.config.js
frontend/.devcontainer/: devcontainer.json
frontend/src/: lib.rs  main.rs
frontend/src/app/: mod.rs
frontend/src/components/: footer.rs  navbar.rs
frontend/src/pages/: dsa.rs  home.rs  mod.rs  projects.rs
frontend/styles/: input.css  output.css
my-web-portfolio/: Cargo.toml  tailwind.config.js
my-web-portfolio/src/: app.rs  components.rs
my-web-portfolio/src/components/: error.rs  footer.rs  mod.rs  top_nav.rs  topnav.rs
my-web-portfolio/src/pages/: about.rs  dsa.rs  hire.rs  home.rs
my-web-portfolio/src/routes/: home.rs
my-web-portfolio/style/: main.scss  output.css
src/: components.rs  lib.rs  main.rs  pages.rs
src/components/: topnav.rs
src/pages/: about.rs  projects.rs
